late night edits

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ div.col-md-12 .seventeen {
 div.col-md-12 .summary {
   font-family: 'Ubuntu Condensed', sans-serif;
   font-size: 20px;
-  color: pink;
+  color: #F96EC6;
 }
 
 div.col-md-12 .bio {
